Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P3: Somewhat important
-
Resolution: Done
-
Affects Version/s: 5.3.0
-
Fix Version/s: 5.3.1
-
Component/s: Core: Object Model, Documentation
-
Labels:None
-
Commits:2d75c21923d3a74a6eafa11945e14a2cb7533059
Description
someQObject->blockSignals(false);
should be
someQObject->blockSignals(wasBlocked);
Attachments
For Gerrit Dashboard: QTBUG-39352 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
86414,1 | Update the QSignalBlocker docs to show actual behavior | stable | qt/qtbase | Status: MERGED | +2 | 0 |