Update the QSignalBlocker docs to show actual behavior

QSignalBlocker resets to the previous state, which might have already
been a blocked signal state.

Task-number: QTBUG-39352
Change-Id: I918cc6ea346755b940e027cee5d6704824fbba32
Reviewed-by: David Faure <david.faure@kdab.com>